Improving display of student results and dashboard in general.
